# orange

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  config.cpp  config.h  log.cpp  log.h  singleton.h  util.cpp  util.h
tests/: CMakeLists.txt  test.cpp  test_config.cpp  test_log.cpp
